--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-        <img src="/guess.png" alt="Profile Picture Could Not Be Loaded! Please refresh the page or try changing the browser." class="profile-picture">
+        <img src="guess.png" alt="Profile Picture Could Not Be Loaded! Please refresh the page or try changing the browser." class="profile-picture">
     
         <div class="name">Guessnet</div>
         
