--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 
         <img src="guess.png" alt="Profile Picture Could Not Be Loaded! Please refresh the page or try changing the browser." class="profile-picture">
     
-        <div class="name">Guessnet</div>
-            <p class="pee"> Media | Technology | News </p>
+        <div class="name">Guessnet
+        <p> Media | Technology | News </p>
+        </div>
+            
             <a href="" target="blank"  class="links">Website</a>
             <a href="https://www.instagram.com/guessnet/" target="blank"  class="links">Instagram</a>
             <a href="" target="blank"  class="links">LinkedIn</a>
