--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="guess.png" alt="Profile Picture Could Not Be Loaded! Please refresh the page or try changing the browser." class="profile-picture">
     
         <div class="name">Guessnet
-        <p> Media | Technology | News </p>
+        <p class="pee"> Media | Technology | News </p>
         </div>
             
             <a href="" target="blank"  class="links">Website</a>
